added some content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-    <test-component name="Dominic"></test-component>
+    <section class="hero">
+        <p>Dominic Faulring—Full Stack Developer</p>
+        <h1>Crafting bespoke websites and applications to help businesses thrive online.</h1>
+    </section>
 </body>
 
 </html>
