removed some js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <section class="hero">
         <p>Dominic Faulring—Full Stack Developer</p>
         <h1>Crafting bespoke websites and applications to help businesses thrive online.</h1>
+        <ul>
+            <li>
+                <a href="https://www.twitter.com/dfaulring" target="_blank">Twitter</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/dfaulring" target="_blank">Linkedin</a>
+            </li>
+            <li>
+                <a href="https://www.github.com/dfaulring" target="_blank">Github</a>
+            </li>
+        </ul>
     </section>
 </body>
 
