--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
     <section class="hero">
         <p>Dominic Faulring—Full Stack Developer</p>
-        <h1>Crafting bespoke websites and applications to help businesses thrive online.</h1>
+        <h1>
+            Crafting bespoke websites and applications to help businesses thrive online. Currently Lead Web Developer at
+            Electriq.
+        </h1>
         <ul>
             <li>
                 <a href="https://www.twitter.com/dfaulring" target="_blank">Twitter</a>
