--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Dominic Faulring—Full Stack Developer</p>
         <h1>
             Crafting bespoke websites and applications to help businesses thrive online. Currently Lead Web Developer at
-            Electriq.
+            <a href="https://electriqmarketing.com" target="_blank">Electriq</a>.
         </h1>
         <ul>
             <li>
