--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Dominic Faulring—Full Stack Developer</title>
+    <link rel="stylesheet" href="./css/main.css" />
+    <script src="./js/main.js" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Dominic Faulring—Full Stack Developer</title>
-  <link rel="stylesheet" href="./css/main.css">
-  <script src="./js/main.js" defer></script>
-</head>
-
-<body>
-  <section class="hero">
-    <p>Dominic Faulring—Full Stack Developer</p>
-    <h1>
-      Crafting bespoke websites and applications to help businesses thrive online. Currently Lead Web Developer at
-      <a href="https://electriqmarketing.com" target="_blank">Electriq</a>.
-    </h1>
-    <ul>
-      <li>
-        <a href="https://www.twitter.com/dfaulring" target="_blank">Twitter</a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/dfaulring" target="_blank">Linkedin</a>
-      </li>
-      <li>
-        <a href="https://www.github.com/dfaulring" target="_blank">Github</a>
-      </li>
-    </ul>
-  </section>
-</body>
-
+  <body>
+    <section class="hero">
+      <p>Dominic Faulring—Full Stack Developer</p>
+      <h1>
+        Crafting bespoke websites and applications to help businesses thrive
+        online. Currently Lead Web Developer at
+        <a href="https://electriqmarketing.com" target="_blank">Electriq</a>.
+      </h1>
+      <ul>
+        <li>
+          <a href="https://www.twitter.com/dfaulring" target="_blank"
+            >Twitter
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/dfaulring" target="_blank">
+            Linkedin
+          </a>
+        </li>
+        <li>
+          <a href="https://www.github.com/dfaulring" target="_blank">
+            Github
+          </a>
+        </li>
+      </ul>
+    </section>
+  </body>
 </html>
